--- a/views/default/difflet.html
+++ b/views/default/difflet.html
@@ -1,29 +1,36 @@
 {{extend 'layout.html'}}
-<h1>This is the default/difflet.html template</h1>
-<!-- {{=BEAUTIFY(response._vars)}} -->
-<style>
-div {
-   margin: 0 auto;
-    border: 1px solid black;
-    text-align: center;
-}
-.dp{
-   width=100px;
-    margin: 0 auto;
-}
-</style>
-<div class="header">
-    <span>{{=e1}}</span>|
-    <span>{{=e2}}</span>
-</div><br>
-<div class="main-difflet">
-    {{for i in range(len(s1_res)):}}
-        <div class="dp">
-            {{=s1_res[i][0]}}
+
+<div class="main">
+  <div class="row heading">
+    <div class="col-md-2"></div>
+    <div class="col-md-4 leftPane">{{=e1}}</div>
+    <div class="col-md-4">{{=e2}} </div>
+  </div>
+
+  {{for i in range(len(s1_res)):}}
+    <div class="row">
+        <div class="col-md-4"></div>
+        <div class="col-md-4 dp {{='secondOnwards' if i > 0 else 'firstdp'}}" data-id="{{=i}}">
+          <span>{{=s1_res[i][0]}}</span>
         </div>
-       <div>
-           <span>{{=s1_res[i][1]}}</span> | 
-           <span>{{=s2_res[i][1]}}</span> 
-       </div><br>
+    </div>
+    <div class="row row{{=i}}">
+        <div class="col-md-2"></div>
+        <div class="col-md-4 leftPane"> {{=s1_res[i][1]}} </div>
+        <div class="col-md-4 rightPane"> {{=s2_res[i][1]}} </div>
+        <div class="col-md-2"></div>
+    </div>
     {{pass}}
+
+    <div class="row">
+        <div class="col-md-4"></div>
+        <div class="col-md-4 dp secondOnwards addDp">
+            <form action="{{=URL('addDiffPoints', e1, e2)}}">
+                <input type="hidden" name="e1" value="e1" />
+                <input type="hidden" name="e2" value="e2" />
+            </form>
+            <span class="glyphicon glyphicon-plus"></span>
+        </div>
+    </div>
+
 </div>
