--- a/static/css/difflet.css
+++ b/static/css/difflet.css
@@ -1,4 +1,8 @@
 body { font-family: 'Open Sans', sans-serif; }
+html {
+    overflow: -moz-scrollbars-vertical;
+    overflow-y: scroll;
+}
 
 div.main, div.main div {
     min-height: 5px;
@@ -9,21 +13,30 @@ div.main{ margin-bottom: 2em; }
 .dp { text-align: center; margin: 1em 0; padding: .2em; }
 
 .dp span {
-    border: 1px solid black;
-    padding: 1px 20px;
-    border-radius: 40px;
-    background-color: #eae9e8
+    /*border           : 1px solid black;*/
+    padding            : 1px 20px;
+    border-radius      : 40px;
+    font-weight        : bold;
+    background-color   : #eae9e8
+    -webkit-box-shadow : 6px 6px 29px -1px rgba(0,0,0,0.77);
+    -moz-box-shadow    : 6px 6px 29px -1px rgba(0,0,0,0.77);
+    box-shadow         : 6px 6px 29px -1px rgba(0,0,0,0.77);
 }
 
 .secondOnwards { margin-top: .2em; }
 
-div.addDp { margin-top: 1em; }
+div.addDp { margin-top: 1em;
+}
 
-div.addDp span { padding: 5px 20px; border-radius: 30px; }
+div.addDp span { padding: 5px 20px; border-radius: 30px;
+    -webkit-box-shadow : 6px 6px 29px -1px rgba(0,0,0,0.77);
+    -moz-box-shadow    : 6px 6px 29px -1px rgba(0,0,0,0.77);
+    box-shadow         : 6px 6px 29px -1px rgba(0,0,0,0.77);
+}
 
-div.main div.leftPane { text-align: right; border-right: 1px solid black; }
+div.main div.leftPane { text-align: right; border-right: 2px solid black; }
 
-div.main div.rightPane { text-align: left; border-left: 1px solid black; margin-left: -1px; }
+div.main div.rightPane { text-align: left; border-left: 2px solid black; margin-left: -2px; }
 
 div.heading div {
     border: 0px solid red;
@@ -34,10 +47,16 @@ div.heading div {
     margin: .2em 0;
     padding-top: 1em;
     vertical-align: middle;
-    font-size: 1.2em;
+    font-size: 1.5em;
 }
 
 div.main div.heading div.leftPane {
     text-align: center;
-    border-right: 1px solid black;
+    border-right: 2px solid black;
+}
+div.heading div.rightPane {
+    text-align:center;
+}
+div.heading div.leftPane, div.heading div.rightPane {
+    border-bottom: 0px solid black;
 }
