--- a/views/default/difflet.html
+++ b/views/default/difflet.html
@@ -1,36 +1,177 @@
 {{extend 'layout.html'}}
+<style>
+.leftPane img, .rightPane img {
+    width: 300px;
+    height: 200px;
+}
+#one { text-align : center}
+#twow {position   : relative; width : 100%;}
+
+#two {
+    background: white;
+position           : fixed;
+top                : 50%;
+left               : 50%;
+margin-left        : -200px;
+margin-top         : -150px;
+display            : none; /* change this */
+border             : 2px solid gray;
+min-height         : 250px;
+min-width          : 400px;
+-webkit-box-shadow : 18px 18px 7px -4px rgba(0,0,0,0.53);
+-moz-box-shadow    : 18px 18px 7px -4px rgba(0,0,0,0.53);
+box-shadow         : 18px 18px 7px -4px rgba(0,0,0,0.53);
+border-radius      : 10px;
+}
+#two div#form{
+    padding     : 5px 10px;
+    padding-top : 2em;
+}
+#one{
+    cursor        : pointer;
+/*    border: 1px solid black;
+border-radius      : 15px;
+padding: 5px 20px; */
+}
+#close{
+    display       : block;
+    cursor        : pointer;
+    position      : absolute;
+    top           : 5px;
+    right         : 5px;
+    border        : 1px solid black;
+    border-radius : 4px;
+    padding       : 2px 6px;
+}
+#close     : hover{
+    color  : gray;
+    border : 1px solid gray;
+}
+#two {
+    text-align : center;
+}
+div#form div input {margin : 7px;}
+#forme div { border         : 0px solid red;}
+</style>
 
 <div class="main">
   <div class="row heading">
     <div class="col-md-2"></div>
     <div class="col-md-4 leftPane">{{=e1}}</div>
-    <div class="col-md-4">{{=e2}} </div>
+    <div class="col-md-4 rightPane">{{=e2}} </div>
   </div>
 
-  {{for i in range(len(s1_res)):}}
+  {{if 'img' in output:}}
     <div class="row">
         <div class="col-md-4"></div>
         <div class="col-md-4 dp {{='secondOnwards' if i > 0 else 'firstdp'}}" data-id="{{=i}}">
-          <span>{{=s1_res[i][0]}}</span>
+          <span class="btn btn-primary btn-large">Image</span>
         </div>
     </div>
+
     <div class="row row{{=i}}">
         <div class="col-md-2"></div>
-        <div class="col-md-4 leftPane"> {{=s1_res[i][1]}} </div>
-        <div class="col-md-4 rightPane"> {{=s2_res[i][1]}} </div>
+        <div class="col-md-4 leftPane">
+            <img src="{{=output['img'][0]}}" />
+        </div>
+        <div class="col-md-4 rightPane">
+            <img src="{{=output['img'][1]}}" />
+        </div>
         <div class="col-md-2"></div>
     </div>
+    {{del output['img']}}
+    {{pass}}
+
+
+  {{i=0}}
+  {{for dp, value in output.iteritems(): }}
+
+    <div class="row">
+        <div class="col-md-4"></div>
+        <div class="col-md-4 dp {{='secondOnwards' if i > 0 else 'firstdp'}}"  data-id="{{=i}}">
+          <span class="btn btn-primary btn-large">{{=dp.capitalize()}}</span>
+        </div>
+    </div>
+
+    <div class="row row{{=i}}">
+        <div class="col-md-2"></div>
+        <div class="col-md-4 leftPane">
+            {{if dp == 'img':}}
+                <img src="{{=value[0]}}" />
+            {{else:}}
+                {{=value[0]}}
+            {{pass}}
+        </div>
+        <div class="col-md-4 rightPane">
+            {{if dp == 'img':}}
+                <img src="{{=value[1]}}" />
+            {{else:}}
+                {{=value[1]}}
+            {{pass}}
+        </div>
+        <div class="col-md-2"></div>
+
+    </div>
+    {{i+=1}}
     {{pass}}
 
     <div class="row">
         <div class="col-md-4"></div>
         <div class="col-md-4 dp secondOnwards addDp">
-            <form action="{{=URL('addDiffPoints', e1, e2)}}">
-                <input type="hidden" name="e1" value="e1" />
-                <input type="hidden" name="e2" value="e2" />
-            </form>
-            <span class="glyphicon glyphicon-plus"></span>
+            <!-- <div id="one" class="glyphicon glyphicon-plus"></div> -->
+            {{if auth.user is not None:}}
+            <div id="one" class="btn btn-primary btn-large glyphicon-plus"> <b>Add</b> </div>
+            {{pass}}
+            <div id="two">
+                <div id="twow"> <span id="close">x</span> </div>
+                <div id="form">
+                    <form action="{{=URL('default', 'addDiffPoint')}}" >
+                        <input type="hidden" name="e1" value="{{=e1}}">
+                        <input type="hidden" name="e2" value="{{=e2}}">
+                        <div>Add differentiating point</div>
+                        <div><input type="text" id="new_dp" name="new_dp"/></div>
+                        <div>Enter value for each entity </div>
+                        <div class="row" id="forme">
+                            <div class="col-md-6"><b>{{=e1}}</b></div>
+                            <div class="col-md-6"><b>{{=e2}}</b></div>
+                        </div>
+                        <div class="row">
+                            <div class="col-md-6">
+                                <input type="text" id="new_e1_dp" name="new_e1_dp" />
+                            </div>
+                            <div class="col-md-6">
+                                <input type="text" id="new_e2_dp" name="new_e2_dp" />
+                            </div>
+                        </div>
+                            <input type="submit" class="btn-primary"/>
+
+                    </form>
+                </div>
+            </div>
         </div>
     </div>
 
 </div>
+
+
+
+<script>
+done=0
+$('#one').on('click', function() {
+    console.log('here one is');
+    if (done == 0) {
+        $('#two').show();
+        $('#two').animate({'top' : '-=60px'}, 120);
+        done=1;
+    }
+});
+
+$('#close').on('click', function() {
+    done=0;
+    console.log('closing div two');
+    $("#two").css('top','+=60px');
+    $('#two').hide();
+});
+
+</script>
+
