--- a/views/default/popup_form.html
+++ b/views/default/popup_form.html
@@ -43,7 +43,8 @@ border-radius      : 10px;
     #forme div{ border: 0px solid red;}
 </style>
 <div id="one">one</div>
-<div id="two"><div id="twow"> <span id="close">x<span> </div>
+<div id="two">
+    <div id="twow"> <span id="close">x<span> </div>
     <div id="form">
         <form>
             <div>Add differentiating point</div>
@@ -64,7 +65,6 @@ border-radius      : 10px;
                 <input type="submit" class="btn-primary"/>
 
         </form>
-
     </div>
 </div>
 <script>
